- ~mc-focus~ playback now uses =:plist= style keyword args.  The new keys:
  + =:invisibility-spec=
  + =:overlays=
  + =:beg=
  + =:end=
  + =:string= 🚧 Experimental!  Might change to =:text= or =:spans= depending on what happens with trimming
  + =:highlights=
** Fixed 👷
- ~moc-subtle-cursor-mode~ no longer blinks from non-motion commands
* v0.3.0 A New Hope 🎄
Nearly a complete rewrite.  After figuring out what belongs in dslide, this package has become more clearly defined.

The ~moc-focus~ command remains the focal point.  Many of the tools like setting the size, hiding the cursor, or changing faces all serve to enhance ~moc-focus~.

⚠️ The naming and features have undergone heavy renaming and stuff.  Don't expect anything to be exactly the same from 0.2.0.  That version was unmaintained on Github for a while as my changes were only localy evolving.
** Added ✨
- ~moc-dispatch~ to control all the things
- ~moc-focus-highlight~ and ~moc-focus-un-highlight~  now support multiple highlighted spans
- ~moc-focus~ now has ~moc-focus-dispatch~ to provide a magit like help / info interface to quickly learn the MoC controls
- ~moc-focus-default-remaps~ will apply ~moc-face-remap~ presets so you don't have to manually do common remaps.  The remaps are still interactive and can be manually tweaked for edge cases.
** Changed 📈
- ~moc-face-remap~ is the old org mode remapping.  This version is flexible for all situations and supports multiple preset profiles
- The variables controlling ~moc-focus~ have been renamed / revamped.  The new variables are:
  + ~moc-focus-max-width-factor~
  + ~moc-focus-max-height-factor~
  + ~moc-focus-max-area-factor~
  + ~moc-focus-max-scale~
  These controls are both more flexible and intuitive than whatever was there before.  Naming is more consistent.  Please update.  🎅
** Removed 💩
- Everything related specifically to org mode like hiding markup
** Fixed 👷
- Well, a lot more was fixed than is newly broken.  0.2.0 was barely a package at all